src/objects/LeadConversionFieldMapping__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <description>SFDC1-46 Lead to Other object conversion</description>
    <fields>
        <fullName>DefaultValue__c</fullName>
        <description>Default Value is where we have to set a particular value for a Target Field if the value isn&apos;t available in source</description>
        <inlineHelpText>Please Enter the Default Value( if applicable)</inlineHelpText>
        <label>Default Value</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SourceAPIField__c</fullName>
        <description>API field name of the Source object (Lead)</description>
        <inlineHelpText>Please Enter Source API name, if Source API is not known please enter &quot;NoUse&lt;IntergerValue&gt;&quot;</inlineHelpText>
        <label>Source API Field</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TargetAPIField__c</fullName>
        <description>API field name of the Target object,  if Target API is not known please enter &quot;NoUse&lt;IntergerValue&gt;&quot; (only for querying on lead object)</description>
        <inlineHelpText>Please Enter Target API name, if Target API is not known please enter &quot;NoUse&lt;IntergerValue&gt;&quot;</inlineHelpText>
        <label>Target API Field</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TargetObjectName__c</fullName>
        <description>Target Object API name</description>
        <inlineHelpText>Please Enter Target Object API Name</inlineHelpText>
        <label>Target Object Name</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <label>Lead Conversion Field Mapping</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>DefaultValue__c</columns>
        <columns>SourceAPIField__c</columns>
        <columns>TargetAPIField__c</columns>
        <columns>TargetObjectName__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
</CustomObject>